# fireplace

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  bootstrap  bootstrap.bat  bootstrap.ps1  bootstrap.sh  kettle.py  requirements.txt  results.txt  setup.cfg  setup.py  tox.ini
data/: basic.json
fireplace/: __init__.py  actions.py  aura.py  bootstrap  card.py  cards.py  cardxml.py  controller.py  deck.py  entity.py  enums.py  events.py  exceptions.py  game.py  heroes.py  logging.py  managers.py  monte_carlo_tree.py  player.py  rules.py  targeting.py  utils.py  xmlcard.py
helper/: generator.py  implemented.py  readme.py  requirements.py  utils.py  zephrys_pool.py
kettle/: kettle.py
scripts/: bootstrap.ps1  bootstrap.py  bootstrap.sh  card_implementer.py  create_cardset_boilerplate.py  implemented.py  update_readme.py
tests/: benchmarks.py  cards_implementation_in_readme.py  full_game.py  generator.py  implemented.py  main.py  requirements_generator.py  test_adapt.py  test_aoo.py  test_auchenai_soulpriest.py  test_blackrock.py  test_boomsday.py  test_brann_bronzebeard.py  test_carddb.py  test_cardxml.py  test_classic.py  test_controller.py  test_dalaran.py  test_discover.py  test_dragons.py  test_dsl.py  test_exceptions.py  test_feign_death.py  test_full_game.py  test_gang.py  test_gangs.py  test_gvg.py  test_hero_powers.py  test_icecrown.py  test_initiate.py  test_interactions.py  test_jaraxxus.py  test_kac.py  test_karazhan.py  test_kobolds.py  test_league.py  test_mage.py  test_main.py  (+16 more)
(+393 files in other folders)
