[metadata]
name = fireplace
version = 0.1.0
description = Hearthstone engine reimplementation and simulator
author = Jerome Leclanche
author_email = jerome@leclan.ch
url = https://hearthsim.info/fireplace/
download_url = https://github.com/HearthSim/fireplace/tarball/master
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Topic :: Games/Entertainment :: Simulation

[options]
packages = find:
include_package_data = True
zip_safe = True
install_requires =
    hearthstone @ git+https://github.com/shinoi2/python-hearthstone.git#egg=hearthstone
    hearthstone_data

[options.packages.find]
exclude =
    tests
